--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -15,7 +15,7 @@
         .cell {
             width: 100px;
             height: 100px;
-            background-color: #ddd;
+            background-color: #e15050;
             display: flex;
             align-items: center;
             justify-content: center;
